fix: geocoding z-index to 1

--- a/css/view.css
+++ b/css/view.css
@@ -246,7 +246,7 @@ img {
   top: 3%;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 10000
+  z-index: 1;
 }
 
 .geocoding_div form {
